development
  Raise error if dierctory contains '?' character (unescapable).

0.1.1.20120407
  Repackage and reorganize sources.

0.1.20111203
  iniitial version